# libCacheSim

./: .clang-format  .gitignore  .readthedocs.yaml  .sshyncignore  .travis.yml  API.md  AUTHORS  CHANGES  CMakeLists.txt  FAQ.md  README.md  cmake.yml  dockerfile  libCacheSim.cmake  libCacheSim.cmake.in  libCacheSim.pc  libCacheSim.pc.in  performance.md  quickstart.md  quickstart_cachesim.md  rd.save.1  references.md  test.c
cmake/: Version.cmake
example/cacheCluster/: CMakeLists.txt  README.md  cacheCluster.cpp  cacheClusterThread.cpp  consistentHash.c  main.cpp  md5.c
example/cacheCluster/include/: cache.hpp  cacheCluster.hpp  cacheServer.hpp  consistentHash.h  constCDNSimulator.hpp
example/cacheCluster/libketama/: CMakeLists.txt  ketama.c
example/cacheHierarchy/: CMakeLists.txt  README.md  config.yaml  main.cpp  myconfig.cpp  myconfig.hpp  simulator.cpp  simulator.hpp  utils.cpp  utils.hpp
example/cacheSimulator/: CMakeLists.txt  README.md  main.c  test.cpp
example/cacheSimulatorC/: CMakeLists.txt  cacheSimulator.c  cacheSimulator.h  myLRU.c  myLRU.h
example/cacheSimulatorCPP/: CMakeLists.txt  cacheSimulator.cpp  cacheSimulator.hpp  myLRU.cpp  myLRU.hpp
example/cacheSimulatorMultiSize/: CMakeLists.txt  README.md  main.cpp  plot.py
example/layeredCacheSimulatorCPP/: CMakeLists.txt  myconfig.cpp  simulator.cpp  simulator.hpp  usage.yaml  utils.cpp
libCacheSim/cache/eviction/: ARC.c  ARC2.c  ARCv0.c  Belady.c  BeladyBad.c  BeladySize.c  CMakeLists.txt  CR_LFU.c  Cacheus.c  Clock.c  FIFO.c  FIFOMerge.c  FIFO_Merge.c  FIFO_Reinsertion.c  Hyperbolic.c  LFU.c  LFUDA.c  LFUFast.c  LIRS.c  LRU.c  LRUProb.c  LRU_Belady.c  LRUv0.c  LeCaR.c  LeCaR0.c  LeCaRv0.c  MRU.c  Mithril.c  Optimal.c  OptimalSize.c  QDLP.c  Random.c  RandomLRU.c  RandomTwo.c  S3FIFO.c  S3FIFO_delay.c  S3FIFOd.c  SFIFO.c  SFIFO_Belady.c  SFIFOv0.c  (+12 more)
libCacheSim/dataStructure/: CMakeLists.txt  README.md  bloom.c  bloom.h  minimalIncrementCBF.c  minimalIncrementCBF.h  pqueue.c  pqueue.h  robin_hood.h  splay.c
libCacheSim/dataStructure/hash/: CMakeLists.txt  hash.h  murmur3.c  murmur3.h  xxh3.h  xxhash.h
libCacheSim/dataStructure/hashtable/: CMakeLists.txt  bulkChainingHashTable.c.unfinished  bulkChainingHashTable.h.unfinished  chainedHashTable.h  chainedHashTableV2.c  chainedHashTableV2.h  chainedHashtable.c  cuckoo.c.unfinished  cuckooHashTable.h  hashtable.h  hashtableStruct.h
libCacheSim/dataStructure/include/: pqueue.h
libCacheSim/dataStructure/ketama/: ketama.c  ketama.h
libCacheSim/dataStructure/libcuckoo/: blob_blob_table.h  cuckoo_table_template.cc
libCacheSim/dataStructure/sparsepp/: README.md  spp.h  spp_config.h  spp_dlalloc.h  spp_utils.h
libCacheSim/evictionAlgo/: ARC.c  CMakeLists.txt  Cacheus.c  FIFO.c  GDSF.c  Hyperbolic.c  LFU.c  LFUDA.c  LRU.c  LRUv0.c  LeCaR.c  MRU.c  Optimal.c  Random.c  optimal.c  segcache.c  slabLRC.c  slabLRU.c  slabObjLRU.c
libCacheSim/evictionAlgo/LHD/: CMakeLists.txt  LHDInterface.cpp  bytes.hpp  lhd.cpp  lhd.hpp  repl.hpp
libCacheSim/evictionAlgo/include/: cacheAlg.h
libCacheSim/evictionAlgo/logStructure/: LLSC.c  init.h  learned.c  learned.h  log.h  merge.h  oracle.c  oracle.h  utils.h
libCacheSim/evictionAlgo/toUpdate/: ARC.c  LFU.c  LRU_K.c  Optimal.c  SLRU.c  slabLRC.c  slabLRU.c
libCacheSim/evictionAlgo/unsupported/: AMP.c  AMP.h  Mithril.c  Mithril.h  PG.c  TTL_FIFO.c
libCacheSim/traceReader/: CMakeLists.txt  README.md  binary.c  csv.c  libcsv.c  reader.c  readerInternal.h  readerMT.c  readerUtils.c  readerUtils.h  vscsi.c
libCacheSim/traceReader/customizedReader/: akamaiBin.h  binaryUtils.h  cf1Bin.h  oracleAkamaiBin.h  oracleBin.h  oracleGeneralBin.h  oracleTwrBin.h  oracleWikiBin.h  standardBin.h  twrBin.h  twrNSBin.h  valpinBin.h  vscsi.h  wikiBin.h
libCacheSim/traceReader/generalReader/: binary.c  binary.h  csv.c  csv.h  lcs.c  lcs.h  libcsv.c  libcsv.h  readerInternal.h  txt.c  zstdReader.c  zstdReader.h
libCacheSim/traceReader/include/: binary.h  csv.h  readerInternal.h  readerMT.h  readerUtils.h  vscsi.h
libMimircache/: CMakeLists.txt  libMimircache.config.cmake.in  libMimircache.pc.in  meson.build
libMimircache/benchmark/: CMakeLists.txt  cacheAlgoPerf.c  main.c
libMimircache/cache/: AMP.c  ARC.c  CMakeLists.txt  FIFO.c  FIFOSize.c  LFU.c  LFUFast.c  LRU.c  LRUSize.c  LRU_K.c  MRU.c  Mithril.c  Optimal.c  PG.c  Random.c  SLRU.c  cache.c  cacheOp.c  memcachedLRU.c  slabLRC.c
libMimircache/cacheAlg/: AMP.c  ARC.c  CMakeLists.txt  FIFO.c  FIFOSize.c  LFU.c  LFUFast.c  LRU.c  LRUComplex.c  LRUSize.c  LRU_K.c  MRU.c  Mithril.c  Optimal.c  PG.c  Random.c  SLRU.c  cacheAlgUtils.c  slabLRC.c  slabObjLRU.c
libMimircache/cacheAlgo/: ARC.c  CMakeLists.txt  FIFO.c  LFU.c  LFUFast.c  LRU.c  LRUComplex.c  LRU_K.c  LRUv0.c  MRU.c  Optimal.c  Random.c  SLRU.c  TTL_FIFO.c  cacheAlgUtils.c  slabLRC.c  slabLRU.c  slabObjLRU.c
libMimircache/cacheReader/: binaryReader.c  csvReader.c  reader.c
libMimircache/data/: trace.csv
libMimircache/dataStructure/: CMakeLists.txt  chainedHashTableV2.c  chainedHashtable.c  cuckoo.c.unfinished  hashtable.c  murmur3.c  pqueue.c  queue.c  splay.c
libMimircache/include/: config.h  config.h.in  mimircache.h
libMimircache/profiler/: CMakeLists.txt  distHeatmap.c  distUtils.c  heatmap.c  heatmapThreadLRU.c  heatmapThreadNonLRU.c  profiler.c  profilerLRU.c  profilerUtils.c  wssUtils.cpp
libMimircache/readerUtils/: CMakeLists.txt  readerStat.c  readerStat.h  readerUtils.c
libMimircache/traceReader/: CMakeLists.txt  binaryReader.c  csvReader.c  libcsv.c  reader.c  vscsiReader.c
libMimircache/utils/: CMakeLists.txt  logging.c  mem.c  plugin.c  sysutils.c
test/: CMakeLists.txt  common.h  debug.c  distInternal.c  heatmapTest.c  testDataStructure.c  test_cacheAlg.c  test_cacheAlgo.c  test_common.h  test_dist.c  test_distUtils.c  test_evictionAlgo.c  test_glcache.c  test_hashtable.c  test_heatmap.c  test_l2cache.c  test_lib.sh  test_lruProfiler.c  test_prefetchAlgo.c  test_profiler.c  test_profilerLRU.c  test_simulator.c  test_traceReader.c
test/dep/: heatmapTest.c  test_heatmap.c
(+727 files in other folders)
